# focused

./: .gitignore  CMakeLists.txt  README.md  editor_dialog.cpp  editor_dialog.h  editor_dialog.ui  focused.cpp  get_tray_icon_position.h  get_tray_icon_position.mm  info.plist  local_authentication.h  local_authentication.mm  macos_helpers.h  macos_helpers.mm  macos_privileges.h  macos_privileges.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  privileges.cpp  privileges.h  quadratic_dialog.cpp  quadratic_dialog.h  quadratic_dialog.ui  resources.qrc  rounded_widget.cpp  rounded_widget.h  todo.md
data/: distractors.txt
